--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div class="nav-bar container">
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tonya Rice</a>
+            <a class="navbar-brand" href="/">Tonya Rice</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -28,24 +28,38 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link" href="/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="work.html">Work</a>
+                  <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="books.html">Books</a>
+                    <a class="nav-link" href="/books.html">Books</a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
               </ul>
             </div>
           </div>
         </nav> 
+</div>
+<div class="footer">
+    <p class="black-text"><small>
+        <span id="credit"
+          >🐈
+          <a
+            href="https://github.com/tonyarice/weather-app-plus"
+            target="_blank"
+            class="hyperlink-line"
+            >Open-source code</a
+          >
+          by Tonya Rice | © 2021
+        </span>
+      </small></p>
 </div>
 </body>
 </html>
