--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav-bar container">
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tonya Rice</a>
+            <a class="navbar-brand" href="/">Tonya Rice</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -29,19 +29,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link" href="/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="work.html">Work</a>
+                  <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="books.html">Books</a>
+                    <a class="nav-link" href="/books.html">Books</a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
               </ul>
             </div>
@@ -51,6 +51,20 @@
       <div class="dev-info">
     <h1>Tonya Rice</h1>
     <h2>🇺🇸 Front-end developer, based in the U.S.A.</h2>
+    </div>
+    <div class="footer">
+        <p class="black-text"><small>
+            <span id="credit"
+              >🐈
+              <a
+                href="https://github.com/tonyarice/weather-app-plus"
+                target="_blank"
+                class="hyperlink-line"
+                >Open-source code</a
+              >
+              by Tonya Rice | © 2021
+            </span>
+          </small></p>
     </div>
     
 </body>
