--- a/books.html
+++ b/books.html
@@ -57,7 +57,12 @@
             class="hyperlink-line"
             >Open-source code</a
           >
-          by Tonya Rice | © 2021
+          by Tonya Rice and hosted on <a
+          href="https://github.com/tonyarice/weather-app-plus"
+          target="_blank"
+          class="hyperlink-line"
+          >Netlify</a
+        > | © 2021
         </span>
       </small></p>
 </div>
