--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about.html">About</a>
+                  <a class="nav-link active" aria-current="page" href="/about.html">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/work.html">Work</a>
@@ -49,21 +49,21 @@
 </div>
 <div class="footer">
     <p class="black-text"><small>
-        <span id="credit"
-          >🐈
-          <a
-            href="https://github.com/tonyarice/weather-app-plus"
-            target="_blank"
-            class="hyperlink-line"
-            >Open-source code</a
-          >
-          by Tonya Rice and hosted on <a
-          href="https://github.com/tonyarice/weather-app-plus"
-          target="_blank"
-          class="hyperlink-line"
-          >Netlify</a
-        > | © 2021
-        </span>
+      <span id="credit"
+      >🐈
+      Coded
+      by <a
+      href="https://github.com/tonyarice/weather-app-plus"
+      target="_blank"
+      class="hyperlink-line"
+      >Tonya Rice</a
+      > and hosted on <a
+      href="https://github.com/tonyarice/weather-app-plus"
+      target="_blank"
+      class="hyperlink-line"
+      >Netlify</a
+    > | © 2021
+    </span>
       </small></p>
 </div>
 </body>
