--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/about.html">About</a>
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="/books.html">Books</a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
                   </li>
               </ul>
             </div>
@@ -51,13 +51,13 @@
     <p class="black-text"><small>
         <span id="credit"
           >🐈
-          <a
-            href="https://github.com/tonyarice/weather-app-plus"
-            target="_blank"
-            class="hyperlink-line"
-            >Open-source code</a
-          >
-          by Tonya Rice and hosted on <a
+          Coded
+          by <a
+          href="https://github.com/tonyarice/weather-app-plus"
+          target="_blank"
+          class="hyperlink-line"
+          >Tonya Rice</a
+          > and hosted on <a
           href="https://github.com/tonyarice/weather-app-plus"
           target="_blank"
           class="hyperlink-line"
