Added project images to work page

--- a/work.html
+++ b/work.html
@@ -47,7 +47,88 @@
           </div>
         </nav> 
 </div>
-<div class="footer">
+
+<div class="projects mb-5">
+  <h1>Featured Projects</h1>
+  </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+    <h3>Book Website</h3>
+    <p>#</p>
+  </div>
+    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+      <h3>Book Website</h3>
+    <p>#</p>
+    </div>
+    </div>
+    <div class="row">
+    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+      <h3>Book Website</h3>
+      <p>#</p>
+    </div>
+    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+      <h3>Book Website</h3>
+      <p>#</p></div>
+  </div>
+</div>
+
+  <!-- <div class="d flex justify-content-between">
+    <div class="container">
+    <div class="row">
+      <div class="col product align-items-center d-none d-lg-flex">
+        <img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+      </div>
+      <div class="col-md-6">
+        <div class="product-description">
+        <h2 class="mb-3">Book Website</h2>
+        <div class="row">
+        <p class="mb-5 text-muted">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus
+          quam pellentesque nec nam aliquam. Adipiscing vitae proin sagittis
+          nisl rhoncus mattis rhoncus urna. Convallis a cras semper auctor
+          neque vitae tempus quam.
+        </p>
+      </div>
+
+        <div class="navigation-links">
+          <a href="#" class="btn btn-branding-outline mb-5 primary-link">Launch Book Website</a>
+        </div>
+      </div>
+      </div>
+    
+    <div class="row">
+      <div class="col-md-6">
+        <div class="product-description transparent">
+          <h2 class="mb-3">Weather App</h2>
+          <div class="row">
+          <p class="mb-5 text-muted">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus
+            quam pellentesque nec nam aliquam. Adipiscing vitae proin sagittis
+            nisl rhoncus mattis rhoncus urna. Convallis a cras semper auctor
+            neque vitae tempus quam.
+          </p>
+        </div>
+          <div class="navigation-links">
+            <a href="#" class="btn btn-branding-outline mb-5 primary-link">Launch Weather App</a>
+          </div>
+        </div>
+        </div>
+        
+          <div class="col product align-items-center d-none d-lg-flex">
+            <img src="images/weather-app.PNG" alt="weather" class="img-fluid shadow-md p-2 border rounded" />
+          </div>
+    </div>
+    </div>
+    </div>
+    </div> -->
+  
+
+
+<div class="footer fixed-bottom">
     <p class="black-text"><small>
       <span id="credit"
       >🐈
