Made footer responsive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <a href="#" class="btn btn-primary mt-3">Contact Me</a>
   </div>
     
-    <div class="footer">
+    <footer class="footer">
         <p class="black-text"><small>
           <span id="credit"
           >🐈
@@ -76,7 +76,7 @@
         > | © 2021
         </span>
           </small></p>
-    </div>
+        </footer>
     
 </body>
 </html>
