--- a/work.html
+++ b/work.html
@@ -48,30 +48,43 @@
         </nav> 
 </div>
 
-<div class="projects mb-5">
+<div class="container projects">
+<div class="mb-5">
   <h1>Featured Projects</h1>
   </div>
-
-<div class="container">
+  <div class="project-description">
   <div class="row">
-    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
     <h3>Book Website</h3>
-    <p>#</p>
+    <p>Pulvinar etiam non quam lacus</p>
+    <div class="navigation-links text-center">
+      <a href="#" class="btn btn-primary mt-0 mb-3">Launch Book Website</a>
+    </div>
   </div>
-    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
-    <p>#</p>
+      <p>Pulvinar etiam non quam lacus</p>
+      <div class="navigation-links text-center">
+        <a href="#" class="btn btn-primary mt-0 mb-3">Launch Book Website</a>
     </div>
     </div>
-    <div class="row">
-    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
+    <div class="row mt-3">
+    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
-      <p>#</p>
+      <p>Pulvinar etiam non quam lacus</p>
+    <div class="navigation-links text-center">
+      <a href="#" class="btn btn-primary mt-0 mb-5">Launch Book Website</a>
     </div>
-    <div class="col-md-6"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" />
-      <h3>Book Website</h3>
-      <p>#</p></div>
   </div>
+    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
+      <h3>Book Website</h3>
+      <p>Pulvinar etiam non quam lacus</p>
+    <div class="navigation-links text-center">
+      <a href="#" class="btn btn-primary mt-0 mb-5">Launch Book Website</a>
+    </div>
+    </div>
+  </div>
+</div>
 </div>
 
   <!-- <div class="d flex justify-content-between">
@@ -128,7 +141,7 @@
   
 
 
-<div class="footer fixed-bottom">
+<footer class="footer">
     <p class="black-text"><small>
       <span id="credit"
       >🐈
@@ -146,6 +159,6 @@
     > | © 2021
     </span>
       </small></p>
-</div>
+    </footer>
 </body>
 </html>
