Updated about page text

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 <div class="white-text transparent-field">
 <p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, VS Code, Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
-Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to further develop??? my web skills. I am now pursuing a new career as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity within any field???, however I'd love to work in this capacity with a real estate web design firm, home design web design firm, or book/literary web design firm.
+Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to further develop??? my web skills. I am now pursuing a new career as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity within any field???, however I'd love to work in this capacity with a web development company or department in a real estate, home design, or boo/literary firm.
 <br />
 <br />
 I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. I have a short story anthology and a series, available through Amazon and other online stores. My latest novel is in progress.
@@ -91,8 +91,11 @@ I am an avid writer, who enjoys power walking, weightlifting, reading novels, tr
         <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
         </div>
 
+        <hr />
         <div class="certifications">
-        <div class="row mt-5">
+          <div class="row">
+          <p class="text-center">Certifications</p>
+        
           <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
           <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
