--- a/about.html
+++ b/about.html
@@ -48,65 +48,37 @@
         </nav> 
 </div>
 
-<div class="about-me">
+<div class="about-section">
   <h2>Profile - Tonya Rice</h2>
 
 <div class="white-text transparent-field">
 <p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, VS Code, Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
-Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to further develop??? my web skills. I am now pursuing a new career as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity within any field???, however I'd love to work in this capacity with a web development company or department in a real estate, home design, or book/literary firm.
+Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to further develop??? my web skills. I am pursuing my new career as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity within any field???, however I'd love to work for a web development company or within the web development department of a non-profit organization, real estate online firm, home design firm, or book/literary firm.
 <br />
 <br />
-I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. I have a short story anthology and a series, available through Amazon and other online stores. My latest novel is in progress.
+I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. My short story anthology and series is available through Amazon and other online stores. My latest novel is in progress.
 <br />
 <br />
-I am an avid writer, who enjoys power walking, weightlifting, reading novels, trying new recipes, and spending time with my family. 
+I am an avid writer, who enjoys power walking, weightlifting, reading novels, trying new recipes, and spending time with my family and our cats. 
 </p>
 </div>
 
-<div class="container-icons transparent-field">
-    <div class="row">
-      <div class="col-md-1"><a><img src="images/html5-icon-color.png" alt="html" class="img-fluid shadow-md p-2" /></a>
-        </div>
-        <div class="col-md-1"><a><img src="images/css-icon-color.png" alt="css" class="img-fluid shadow-md p-2" /></a>
-        </div>
-        <div class="col-md-1"><a><img src="images/js-icon-color.png" alt="js" class="img-fluid shadow-md p-2" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-        <div class="col-md-1"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-        </div>
-
-        <hr />
+<hr />
         <div class="certifications">
           <div class="row">
-          <p class="text-center">Certifications</p>
+          <p class="text-center mb-1">Certifications</p>
         
-          <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-3"><a href="#"><img src="images/shecodes1.png" alt="basics-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
-          <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-3"><a href="#"><img src="images/shecodes2.png" alt="plus-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
-          <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-3"><a href="#"><img src="images/shecodes3.png" alt="react-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
-          <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="responsive-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
         </div>
       </div>
-
     </div>
   </div>
   </div>
