Added project images and links on work page, updated about text

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                   <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/books.html">Books</a>
-                  </li>
+                    <a class="nav-link" href="https://www.amazon.com/Tonya-Rice/e/B00A4Z3IPK">Books</a>
+                  </li> 
+                  <!-- or link to project page -->
                 <li class="nav-item">
                     <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
