--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
   <h2>Profile - Tonya Rice</h2>
 
 <div class="white-text transparent-field">
-<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, VS Code, Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
+<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js,  Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, and Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
 Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to further develop??? my web skills. I am pursuing my new career as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity within any field???, however I'd love to work for a web development company or within the web development department of a non-profit organization, real estate online firm, home design firm, or book/literary firm.
 <br />
