--- a/work.html
+++ b/work.html
@@ -54,33 +54,51 @@
   </div>
   <div class="project-description">
   <div class="row">
-    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-    <h3>Book Website</h3>
+    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="short-story" class="img-fluid shadow-md p-2 border rounded" /></a>
+      <h3>Free Short Story Website</h3>
+      <p>Pulvinar etiam non quam lacus</p>
+    <div class="navigation-links text-center">
+      <a href="#" class="btn btn-primary mt-0 mb-5">Launch Short Story Website</a>
+    </div>
+    </div>
+    <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather" class="img-fluid shadow-md p-4 border rounded" /></a>
+    <h3>Weather App</h3>
     <p>Pulvinar etiam non quam lacus</p>
     <div class="navigation-links text-center">
-      <a href="#" class="btn btn-primary mt-0 mb-3">Launch Book Website</a>
+      <a href="https://jolly-cori-46a19e.netlify.app/" class="btn btn-primary mt-0 mb-3">Launch Weather App</a>
     </div>
   </div>
-    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-      <h3>Book Website</h3>
+  </div>
+  <div class="row mt-3">
+    <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react" class="img-fluid shadow-md p-2 border rounded" /></a>
+      <h3>Weather App 2.0</h3>
       <p>Pulvinar etiam non quam lacus</p>
       <div class="navigation-links text-center">
-        <a href="#" class="btn btn-primary mt-0 mb-3">Launch Book Website</a>
+        <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-primary mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
     </div>
+    <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react" class="img-fluid shadow-md p-2 border rounded" /></a>
+      <h3>Dictionary App</h3>
+      <p>Pulvinar etiam non quam lacus</p>
+    <div class="navigation-links text-center">
+      <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-primary mt-0 mb-5">Launch Dictionary App</a>
+    </div>
+  </div>
+</div>
     <div class="row mt-3">
-    <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-page.PNG" alt="books" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
       <p>Pulvinar etiam non quam lacus</p>
     <div class="navigation-links text-center">
-      <a href="#" class="btn btn-primary mt-0 mb-5">Launch Book Website</a>
+      <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-primary mt-0 mb-5">Launch Book Website</a>
     </div>
   </div>
     <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
-      <h3>Book Website</h3>
-      <p>Pulvinar etiam non quam lacus</p>
+      <h3>Real Estate Broker Website</h3>
+      <p>Coming Soon!</p>
+      <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
-      <a href="#" class="btn btn-primary mt-0 mb-5">Launch Book Website</a>
+      <a href="#" class="btn btn-primary mt-0 mb-5">Launch Real Estate Broker Website</a>
     </div>
     </div>
   </div>
