Update made to about page

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to further develop??? my web skills. I am pursuing my new career as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity within any field???, however I'd love to work for a web development company or within the web development department of a non-profit organization, real estate online firm, home design firm, or book/literary firm.
 <br />
 <br />
-I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. My short story anthology and series is available through Amazon and other online stores. My latest novel is in progress.
+I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. My short story anthology and series are available through Amazon and other online stores. My latest novel is in progress.
 <br />
 <br />
 I am an avid writer, who enjoys power walking, weightlifting, reading novels, trying new recipes, and spending time with my family and our cats. 
