Updated about and work CSS styling

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         </nav> 
 </div>
 
-<div class="about-section">
+<div class="about-section container">
   <h2>Profile - Tonya Rice</h2>
 
 <div class="white-text transparent-field">
@@ -62,31 +62,35 @@ I received my B.A. in Social Sciences from Hollins University and my M.F.A. in C
 <br />
 I am an avid writer, who enjoys power walking, weightlifting, reading novels, trying new recipes, and spending time with my family and our cats. 
 </p>
-</div>
 
+</div>
 <hr />
-        <div class="certifications">
+        <div class="certifications container text-center">
           <div class="row">
-          <p class="text-center mb-1">Certifications</p>
-        
-          <div class="col-md-3"><a href="#"><img src="images/shecodes1.png" alt="basics-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <p class="mb-1 white-text transparent-field">Certifications</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/2d81789492e34e9147a4d291d9370915"><img src="images/shecodes1.png" alt="basics-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
-          <div class="col-md-3"><a href="#"><img src="images/shecodes2.png" alt="plus-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/5a8e5c0815342c9d3ec6139d5f3ef5a5"><img src="images/shecodes2.png" alt="plus-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
-          <div class="col-md-3"><a href="#"><img src="images/shecodes3.png" alt="react-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/6ac9c4caa92e33962deac521a25b0ddb"><img src="images/shecodes3.png" alt="react-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
-          <div class="col-md-3"><a href="#"><img src="images/book-page.PNG" alt="responsive-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="responsive-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
+          </div>
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div>
   </div>
-  </div>
+  </div> -->
 
 
 
 <div class="footer">
-    <p class="black-text"><small>
+  <p class="white-text"><small>
+    <!-- change depending upon background image -->
+    <!-- <p class="black-text"><small> -->
       <span id="credit"
       >🐈
       Coded
