--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,9 @@
         </nav> 
 </div>
 <div class="footer">
-    <p class="black-text"><small>
+  <p class="white-text"><small>
+    <!-- change depending upon background image -->
+    <!-- <p class="black-text"><small> -->
         <span id="credit"
           >🐈
           Coded
