--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
     <h2>🇺🇸 Front-end developer, based in the U.S.A.</h2>
     </div>
     <div class="col text-center">
-    <a href="#" class="btn btn-primary mt-3">Contact Me</a>
+    <a href="#" class="btn btn-branding mt-3">Contact Me</a>
   </div>
     
     <footer class="footer">
-        <p class="black-text"><small>
+      <p class="white-text"><small>
+        <!-- change depending upon background image -->
+        <!-- <p class="black-text"><small> -->
           <span id="credit"
           >🐈
           Coded
