Added my background photo and my photo credit to footer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
           >Netlify</a
         > | © 2021
         </span>
-          </small></p>
+        <br />
+          <span class="photo-credit white-text">Photo by Tonya Rice</span>
+        </small></p>
         </footer>  
 </body>
 </html>
