--- a/work.html
+++ b/work.html
@@ -48,22 +48,22 @@
         </nav> 
 </div>
 
-<div class="container projects">
+<div class="container projects transparent-field ">
 <div class="mb-5">
   <h1>Featured Projects</h1>
   </div>
-  <div class="project-description transparent-field p-3">
+  <div class="project-description p-3">
   <div class="row">
     <div class="col-md-6"><a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592"><img src="images/book-page.PNG" alt="short-story" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Free Short Story Website</h3>
-      <p>Pulvinar etiam non quam lacus</p>
+      <p>Created using HTML, CSS, and Vanilla JS</p>
     <div class="navigation-links text-center">
       <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592" class="btn btn-branding mt-0 mb-5">Launch Short Story Website</a>
     </div>
     </div>
     <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather" class="img-fluid shadow-md p-4 border rounded" /></a>
     <h3>Weather App</h3>
-    <p>Pulvinar etiam non quam lacus</p>
+    <p>Created using HTML, CSS, Vanilla JS, and API</p>
     <div class="navigation-links text-center">
       <a href="https://jolly-cori-46a19e.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App</a>
     </div>
@@ -71,15 +71,15 @@
   </div>
   <div class="row mt-3">
     <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react" class="img-fluid shadow-md p-2 border rounded" /></a>
-      <h3>Weather App 2.0</h3>
-      <p>Pulvinar etiam non quam lacus</p>
+      <h3>React Weather App</h3>
+      <p>Created using React.js and API</p>
       <div class="navigation-links text-center">
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
     </div>
     <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react" class="img-fluid shadow-md p-2 border rounded" /></a>
-      <h3>Dictionary App</h3>
-      <p>Pulvinar etiam non quam lacus</p>
+      <h3>React Dictionary App</h3>
+      <p>Created using React.js and API</p>
     <div class="navigation-links text-center">
       <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Dictionary App</a>
     </div>
@@ -88,14 +88,14 @@
     <div class="row mt-3">
     <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-page.PNG" alt="books" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
-      <p>Pulvinar etiam non quam lacus</p>
+      <p>Created using HTML, CSS, and Figma</p>
     <div class="navigation-links text-center">
       <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Book Website</a>
     </div>
   </div>
     <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="book" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Real Estate Broker Website</h3>
-      <p>Coming Soon!</p>
+      <p>Created using HTML, CSS, and Vanilla JS</p>
       <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
       <a href="#" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
