--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c78861cc4e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/src/styles.css" />
     <title>Tonya Rice | Front End Developer</title>
 </head>
@@ -45,6 +46,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
+                  <li>
+                  <a class="nav-link" href="https://www.twitter.com/coolcodechick"><i class="fa fa-github" aria-hidden="true"></i>
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
