Updated body background image

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           class="hyperlink-line"
           >Netlify</a
         > | © 2021
-        </span>
+        <!-- </span>
         <br />
-          <span class="photo-credit white-text">Photo by Tonya Rice</span>
+          <span class="photo-credit white-text">Photo by Marcus Rice</span> -->
         </small></p>
         </footer>  
 </body>
