Updated footer, added book website image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.amazon.com/Tonya-Rice/e/B00A4Z3IPK">Books</a>
+                    <a class="nav-link" href="https://practical-leakey-597752.netlify.app/" target="_blank">Books</a>
                   </li> 
                   <!-- or link to project page -->
                 <li class="nav-item">
@@ -65,7 +65,7 @@
   </div>
     
     <footer class="footer">
-      <p class="white-text"><small>
+      <p class="footer-text"><small>
         <!-- change depending upon background image -->
         <!-- <p class="black-text"><small> -->
           <span id="credit"
