--- a/work.html
+++ b/work.html
@@ -77,23 +77,23 @@
   <div class="row mt-3">
     <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Weather App</h3>
-      <p>Created using React.js and API</p>
+      <p>Created using HTML, CSS, React.js and API</p>
       <div class="navigation-links text-center">
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
     </div>
     <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Dictionary App</h3>
-      <p>Created using React.js and API</p>
+      <p>Created using HTML, CSS, React.js and API</p>
     <div class="navigation-links text-center">
       <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Dictionary App</a>
     </div>
   </div>
 </div>
     <div class="row mt-3">
-    <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-page.PNG" alt="books" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-portfolio.PNG" alt="books" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
-      <p>Created using HTML, CSS, and Figma</p>
+      <p>Created using HTML, CSS, Vanilla JS, and Figma</p>
     <div class="navigation-links text-center">
       <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Book Website</a>
     </div>
