Working on home page footer and footer for other pages
Footer on home page is coding credit; footer on other pages includes contact information

--- a/about.html
+++ b/about.html
@@ -57,22 +57,22 @@
   <h2>Profile - Tonya Rice</h2>
 
 <div class="white-text">
-<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js,  Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, and Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
+<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, and Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
-Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to further develop??? my web skills. I am pursuing my new career as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity within any field???, however I'd love to work for a web development company or within the web development department of a non-profit organization, real estate online firm, home design firm, or book/literary firm.
+Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to advance my web skills. I am pursuing my new career in coding as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, or book/literary entity.
 <br />
 <br />
 I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. My short story anthology and series are available through Amazon and other online stores. My latest novel is in progress.
 <br />
 <br />
-I am an avid writer, who enjoys power walking, weightlifting, reading novels, trying new recipes, and spending time with my family and our cats. 
+When I'm not writing or coding, I enjoy using my time power walking, weightlifting, reading novels, trying new recipes, watching sports (Go Braves! Go Steelers!), classic movies and 90s shows, and spending time with my family and our cats.😺
 </p>
 
 </div>
 <hr />
         <div class="certifications container text-center">
           <div class="row">
-          <p class="mb-1 white-text transparent-field">Certifications</p>
+          <p class="mb-2 white-text transparent-field">Certifications</p>
         </div>
         <div class="row">
           <div class="col-md-6"><a href="https://www.shecodes.io/certificates/2d81789492e34e9147a4d291d9370915"><img src="images/shecodes1.png" alt="basics-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
@@ -92,26 +92,46 @@ I am an avid writer, who enjoys power walking, weightlifting, reading novels, tr
 
 
 
-<div class="footer">
-  <p class="white-text"><small>
-    <!-- change depending upon background image -->
-    <!-- <p class="black-text"><small> -->
-      <span id="credit"
-      >🐈
-      Coded
-      by <a
-      href="https://github.com/tonyarice/weather-app-plus"
-      target="_blank"
-      class="hyperlink-line"
-      >Tonya Rice</a
-      > and hosted on <a
-      href="https://github.com/tonyarice/weather-app-plus"
-      target="_blank"
-      class="hyperlink-line"
-      >Netlify</a
-    > | © 2021
-    </span>
-      </small></p>
+
+
+<footer>
+  <dev class="d-flex justify-content-center mt-3 mb-5">
+  <a href="mailto:tonyaricecodes@gmail.com" class="email-link">tonyaricecodes@gmail.com</a>
+  </dev>
+  <div class="social-links d-flex justify-content-center mb-5">
+    <a href="mailto:tonyacodes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+    <a href="https://www.twitter.com/coolcodechick"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/tonyarice"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+    <a href="https://github.com/tonyarice"><i class="fa fa-github" aria-hidden="true"></i></a>
+    
+  </div>
+</footer>
+
+<!-- <footer>
+  <div class="inquiry transparent-field">
+    <div>
+      <h2>Work Inquiry</h2>
+      <p class="text-muted">Let's work together</p>
+    </div>
+    <div>
+      <a href="/contact.html" class="btn btn-branding">Contact me</a>
+    </div>
+  </div>
+
+  <div class="contact-container container">
+    <h2>Let's Get In Touch!</h2>
+    <h3><a href="mailto:tonyacodes@gmail.com" class="hyperlink-line text-decoration-none">tonyacodes@gmail.com</a></h3>
+    <hr />
+    <div class="social-icons text-center justify-content-between p-3 m-3">
+      <div class="row">
+    <a href="mailto:tonyacodes@gmail.com" class="col-md-3"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+    <a href="https://www.twitter.com/coolcodechick" class="col-md-3"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.twitter.com/coolcodechick" class="col-md-3"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+    <a href="https://www.twitter.com/coolcodechick" class="col-md-3"><i class="fa fa-github" aria-hidden="true"></i></a>
+  </div>
 </div>
+</div>
+
+</footer> -->
 </body>
 </html>
