--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     <a href="#" class="btn btn-branding mt-3">Contact Me</a>
   </div>
     
-    <footer class="footer">
-      <p class="footer-text"><small>
+  
+    <footer class="footer-home">
+      <p class="footer-home-text"><small>
         <!-- change depending upon background image -->
         <!-- <p class="black-text"><small> -->
           <span id="credit"
@@ -86,6 +87,7 @@
         <br />
           <span class="photo-credit white-text">Photo by Marcus Rice</span> -->
         </small></p>
-        </footer>  
+      </footer>  
+      
 </body>
 </html>
