Updated background image, navigation bar links, and footer on homepage

--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,13 @@
                   <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/books.html">Books</a>
+                    <a class="nav-link" href="https://practical-leakey-597752.netlify.app/" target="_blank">Books</a>
                   </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="nav-link" href="https://www.twitter.com/coolcodechick"><i class="fa fa-github" aria-hidden="true"></i>
+                    <a class="nav-link" href="https://github.com/tonyarice"><i class="fa fa-github" target="_blank" aria-hidden="true"></i>
                     </a>
                   </li>
               </ul>
