--- a/books.html
+++ b/books.html
@@ -43,6 +43,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
+                  <li>
+                    <a class="nav-link" href="https://github.com/tonyarice"><i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
+                  </li>
               </ul>
             </div>
           </div>
