--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="/contact.html">Contact</a>
                   </li>
                   <li>
-                  <a class="nav-link" href="https://www.twitter.com/coolcodechick"><i class="fa fa-github" aria-hidden="true"></i>
+                  <a class="nav-link" href="https://github.com/tonyarice" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
                   </a>
                 </li>
               </ul>
@@ -73,12 +73,12 @@
           >🐈
           Coded
           by <a
-          href="https://github.com/tonyarice/weather-app-plus"
+          href="https://github.com/tonyarice/Portfolio-Project-Final"
           target="_blank"
           class="hyperlink-line"
           >Tonya Rice</a
           > and hosted on <a
-          href="https://github.com/tonyarice/weather-app-plus"
+          href="https://app.netlify.com/teams/tonyarice/sites"
           target="_blank"
           class="hyperlink-line"
           >Netlify</a
