Updated footer styling, edited about page, updated contact links

--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,43 @@
             </div>
           </div>
         </nav> 
+
+        <div class="contact-section container transparent-field">
+        <h2>Let's get in touch!</h2>
+        <h3>Email</h3>
+        <p><a href="mailto:tonyaricecodes@gmail.com">tonyaricecodes@gmail.com</a></p>
+        <h3>Twitter</h3>
+        <p><a href="https://www.twitter.com/coolcodechick">@coolcodechick</a></p>
+        <h3>LinkedIn</h3>
+        <p><a href="https://www.linkedin.com/in/tonyarice">linkedin.com/in/tonyarice</a></p>
+        </div>
+
+        <footer>
+          <!-- <hr /> -->
+          <!-- <div class="inquiry d-flex justify-content-between mb-5 d-none d-md-flex">
+            <div>
+            <h4>Work Inquiry</h4>
+            <p>Let's work together.</p>
+          </div>
+          <div>
+            <a href="/" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+          </div> -->
+          <div class="contact">
+            <hr />
+          <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:tonyaricecodes@gmail.com" class="email-link">tonyaricecodes@gmail.com</a>
+          </div>
+          <div class="social-links d-flex justify-content-center mb-5">
+            <a href="mailto:tonyacodes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+            <a href="https://www.twitter.com/coolcodechick"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/tonyarice"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+            <a href="https://github.com/tonyarice"><i class="fa fa-github" aria-hidden="true"></i></a>
+          </div>
+          </div>
+        </footer>
         
-        <div class="contact-container container transparent-field">
+        <!-- <div class="contact-container container transparent-field">
         <h2>Let's Get In Touch!</h2>
         <h3>tonyacodes@gmail.com</h3>
         <hr />
@@ -64,14 +99,15 @@
         <a href="https://www.twitter.com/coolcodechick" class="col-md-3"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
     </div>
-  </div>
+  </div> -->
 
       </div>
 </div>
-<div class="footer">
+
+<!-- <div class="footer">
   <p class="white-text"><small>
-    <!-- change depending upon background image -->
-    <!-- <p class="black-text"><small> -->
+    change depending upon background image
+    <p class="black-text"><small>
         <span id="credit"
           >🐈
           Coded
@@ -88,7 +124,31 @@
         > | © 2021
         </span>
       </small></p>
-</div>
+</div> -->
+
+<div class="footer-home">
+  <p class="footer-home-text"><small>
+    <!-- change depending upon background image
+    <p class="black-text"><small> -->
+      <span id="credit"
+      >🐈
+      Coded
+      by <a
+      href="https://github.com/tonyarice/Portfolio-Project-Final"
+      target="_blank"
+      class="hyperlink-line"
+      >Tonya Rice</a
+      > and hosted on <a
+      href="https://app.netlify.com/teams/tonyarice/sites"
+      target="_blank"
+      class="hyperlink-line"
+      >Netlify</a
+    > | © 2021
+    </span>
+    <br />
+      <!-- <span class="photo-credit white-text">Photo by Marcus Rice</span> -->
+    </small></p>
+  </div> 
 <script src="src/app.js"></script>
 </body>
 </html>
