--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <h2>🇺🇸 Front-end developer, based in the U.S.A.</h2>
     </div>
     <div class="col text-center">
-    <a href="#" class="btn btn-branding mt-3">Contact Me</a>
+    <a href="/contact.html" class="btn btn-branding mt-3">Contact Me</a>
   </div>
     
   
-    <footer class="footer-home">
+    <div class="footer-home">
       <p class="footer-home-text"><small>
         <!-- change depending upon background image -->
         <!-- <p class="black-text"><small> -->
@@ -87,7 +87,7 @@
         <br />
           <span class="photo-credit white-text">Photo by Marcus Rice</span> -->
         </small></p>
-      </footer>  
+      </div>  
       
 </body>
 </html>
