--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
 <div class="white-text">
 <p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, and Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
-Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to advance my web skills. I am pursuing my new career in coding as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, or book/literary entity.
+Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to advance my web skills. I am pursuing an opportunity in coding as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, or book/literary entity.
 <br />
 <br />
 I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. My short story anthology and series are available through Amazon and other online stores. My latest novel is in progress.
 <br />
 <br />
-When I'm not writing or coding, I enjoy using my time power walking, weightlifting, reading novels, trying new recipes, watching sports (Go Braves! Go Steelers!), classic movies and 90s shows, and spending time with my family and our cats.😺
+When I'm not writing or coding, I enjoy using my time power walking, weightlifting, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies, and spending time with my family and our cats.😺
 </p>
 
 </div>
@@ -91,13 +91,20 @@ When I'm not writing or coding, I enjoy using my time power walking, weightlifti
   </div> -->
 
 
-
-
-
 <footer>
-  <dev class="d-flex justify-content-center mt-3 mb-5">
+  <hr class="mt-5" />
+  <div class="inquiry d-flex justify-content-between mt-2 mb-5 d-none d-md-flex">
+    <div>
+    <h4>Work Inquiry</h4>
+    <p>Let's work together.</p>
+  </div>
+  <div>
+    <a href="mailto:tonyaricecodes@gmail.com" class="btn btn-branding mt-3">Contact me</a>
+  </div>
+  </div>
+  <div class="d-flex justify-content-center mb-4">
   <a href="mailto:tonyaricecodes@gmail.com" class="email-link">tonyaricecodes@gmail.com</a>
-  </dev>
+  </div>
   <div class="social-links d-flex justify-content-center mb-5">
     <a href="mailto:tonyacodes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
     <a href="https://www.twitter.com/coolcodechick"><i class="fa fa-twitter" aria-hidden="true"></i></a>
