--- a/work.html
+++ b/work.html
@@ -165,26 +165,27 @@
   
 
 
-<footer class="footer">
-  <p class="white-text"><small>
-    <!-- change depending upon background image -->
-    <!-- <p class="black-text"><small> -->
-      <span id="credit"
-      >🐈
-      Coded
-      by <a
-      href="https://github.com/tonyarice/weather-app-plus"
-      target="_blank"
-      class="hyperlink-line"
-      >Tonya Rice</a
-      > and hosted on <a
-      href="https://github.com/tonyarice/weather-app-plus"
-      target="_blank"
-      class="hyperlink-line"
-      >Netlify</a
-    > | © 2021
-    </span>
-      </small></p>
+    <footer>
+      <hr class="mt-5" />
+      <div class="inquiry d-flex justify-content-between mt-2 mb-5 d-none d-md-flex">
+        <div>
+        <h4>Work Inquiry</h4>
+        <p>Let's work together.</p>
+      </div>
+      <div>
+        <a href="mailto:tonyaricecodes@gmail.com" class="btn btn-branding mt-3">Contact me</a>
+      </div>
+      </div>
+      <div class="d-flex justify-content-center mb-4">
+      <a href="mailto:tonyaricecodes@gmail.com" class="email-link">tonyaricecodes@gmail.com</a>
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a href="mailto:tonyacodes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+        <a href="https://www.twitter.com/coolcodechick"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/tonyarice"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <a href="https://github.com/tonyarice"><i class="fa fa-github" aria-hidden="true"></i></a>
+        
+      </div>
     </footer>
 </body>
 </html>
