Added latest SheCodes cert image and additional project information

--- a/work.html
+++ b/work.html
@@ -64,6 +64,7 @@
   <div class="row">
     <div class="col-md-6"><a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592"><img src="images/book-page.PNG" alt="short-story-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Free Short Story Website</h3>
+      <h6>Find out more about my short story and click link on the site to get yours!</h4>
       <p>Created using HTML, CSS, and Vanilla JS</p>
     <div class="navigation-links text-center">
       <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592" class="btn btn-branding mt-0 mb-5">Launch Short Story Website</a>
@@ -71,6 +72,7 @@
     </div>
     <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" /></a>
     <h3>Weather App</h3>
+    <h6>Find out the weather in your area and around the world!</h4>
     <p>Created using HTML, CSS, Vanilla JS, and API</p>
     <div class="navigation-links text-center">
       <a href="https://jolly-cori-46a19e.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App</a>
@@ -80,6 +82,7 @@
   <div class="row mt-3">
     <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Weather App</h3>
+      <h6>Another weather service app to find out the weather where you are or may be going.</h4>
       <p>Created using HTML, CSS, React.js and API</p>
       <div class="navigation-links text-center">
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
@@ -87,6 +90,7 @@
     </div>
     <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Dictionary App</h3>
+      <h6>Find the definition of a word... any word, go on, give it a try!😊</h4>
       <p>Created using HTML, CSS, React.js and API</p>
     <div class="navigation-links text-center">
       <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Dictionary App</a>
@@ -96,6 +100,7 @@
     <div class="row mt-3">
     <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-portfolio.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
+      <h6>Website about my books with links to purchase. Get your copies!</h4>
       <p>Created using HTML, CSS, Vanilla JS, and Figma</p>
     <div class="navigation-links text-center">
       <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Book Website</a>
@@ -103,6 +108,7 @@
   </div>
     <div class="col-md-6"><a href="#"><img src="images-2/sitecomingsoon1.png" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
+      <h6>Website for real estate broker in progress.</h4>
       <p>Created using HTML, CSS, and Vanilla JS</p>
       <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
