--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
   <h2>Profile - Tonya Rice</h2>
 
 <div class="white-text">
-<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, and Responsive Web Design. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
+<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, FLexbox, Git, GitHub, API, and Responsive Web Design. For design, I also work with Figma and Canva. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
 Based in Virginia, I am also an author and Realtor. After assuming the responsibilites of designing, developing, and maintaining my real estate brokerage's website, I decided to advance my web skills. I am pursuing an opportunity in coding as an HTML/CSS Developer or Junior Front End Developer. I am open to work in this capacity with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, or book/literary entity.
 <br />
@@ -83,7 +83,7 @@ When I'm not writing or coding, I enjoy using my time power walking, weightlifti
           </div>
           <div class="col-md-6"><a href="https://www.shecodes.io/certificates/6ac9c4caa92e33962deac521a25b0ddb"><img src="images/shecodes3.png" alt="react-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
-          <div class="col-md-6"><a href="#"><img src="images/book-page.PNG" alt="responsive-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
+          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/71e571236da5f7b0d8a4691b4cb823fa"><img src="images/shecodes4.png" alt="responsive-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
           </div>
           </div>
         </div>
