Edited project definition.
Link to book isn't on site - yet. Will add...

--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
   <div class="row">
     <div class="col-md-6"><a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592"><img src="images/book-page.PNG" alt="short-story-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Free Short Story Website</h3>
-      <h6>Find out more about my short story and click link on the site to get yours!</h4>
+      <h6>Find out more about my short story.</h4>
       <p>Created using HTML, CSS, and Vanilla JS</p>
     <div class="navigation-links text-center">
       <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592" class="btn btn-branding mt-0 mb-5">Launch Short Story Website</a>
