Updated about text

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ Based in Virginia, I am also an author and Realtor. After assuming the responsib
 I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. My short story anthology and series are available through Amazon and other online stores. My latest novel is in progress.
 <br />
 <br />
-When I'm not writing or coding, I enjoy using my time power walking, weightlifting, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies, and spending time with my family and our cats.😺
+When I'm not writing or coding, I enjoy using my time power walking, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies, and spending time with my family and our cats.😺
 </p>
 
 </div>
