--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
             <a href="/" class="btn btn-branding mt-3">Contact me</a>
           </div>
           </div> -->
-          <div class="contact">
+          <div class="contact contact-page">
             <hr />
           <div class="d-flex justify-content-center mb-4">
           <a href="mailto:tonyaricecodes@gmail.com" class="email-link">tonyaricecodes@gmail.com</a>
