Added broker website image and link to work page

--- a/work.html
+++ b/work.html
@@ -115,10 +115,10 @@
       <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Book Website</a>
     </div>
   </div>
-    <div class="col-md-6"><a href="#"><img src="images-2/sitecomingsoon1.png" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="https://silly-yonath-cc0f85.netlify.app/"><img src="images/broker-website.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
       <h6>Website for real estate broker in progress.</h6>
-      <p>Created using HTML, CSS, and Vanilla JS</p>
+      <p>Created using HTML, CSS</p>
       <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
       <a href="#" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
