Updated website description

--- a/work.html
+++ b/work.html
@@ -117,7 +117,7 @@
   </div>
     <div class="col-md-6"><a href="https://silly-yonath-cc0f85.netlify.app/"><img src="images/broker-website.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
-      <h6>Website for real estate broker in progress.</h6>
+      <h6>Website for real estate broker, Marcus Rice.</h6>
       <p>Created using HTML, CSS</p>
       <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
